--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,15 @@ services:
             - redis
             - meilisearch
             - selenium
+    phpmyadmin:
+            image: phpmyadmin/phpmyadmin:latest
+            restart: always
+            environment:
+                PMA_HOST: '${DB_HOST}'
+                PMA_USER: '${DB_USERNAME}'
+                PMA_PASSWORD: '${DB_PASSWORD}'
+            ports:
+                - "8080:80"
     mysql:
         image: 'mysql/mysql-server:8.0'
         ports:
