--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
             - meilisearch
             - selenium
     phpmyadmin:
+        networks:
+          - sail
         image: 'phpmyadmin:latest'
         links:
           - mysql:mysql
