--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
     //"extends": "@vue/tsconfig/tsconfig.web.json",
     "compilerOptions": {
-        "target": "ESnext", // or "es2022", "esnext", "system", "node16", or "nodenext"
-        "module": "ESnext", // or "es2022", "esnext", "system", "node16", or "nodenext"
+        "target": "ESnext", // or "es2022", "esnext", "system", "node16", or "nodenext",
+        "module": "ESnext", // or "es2022", "esnext", "system", "node16", or "nodenext",
         "types": [
             "vite/client"
         ],
