--- a/package.json
+++ b/package.json
@@ -99,5 +99,8 @@
         "vue-tippy": "^6.2.0",
         "vue3-google-login": "^2.0.18",
         "ziggy-js": "^1.6.0"
+    },
+    "optionalDependencies": {
+        "@rollup/rollup-linux-x64-gnu": "4.9.5"
     }
 }
