--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "proxy": "http://localhost:4000",
     "scripts": {
         "dev": "run-s vite:dev artisan:serve",
-        "vite:dev": "bunx --bun vite",
+        "vite:dev": "vite",
         "artisan:serve": "php artisan serve",
         "build": "vite build && vite build --ssr",
         "type-check": "vue-tsc --noEmit"
