--- a/conf/nginx/nginx-site.conf
+++ b/conf/nginx/nginx-site.conf
@@ -28,8 +28,17 @@ server {
   charset utf-8;
 
   location / {
-      try_files $uri $uri/ /index.php?$query_string;
-  }
+        try_files $uri $uri/ /index.php?$query_string;
+        gzip_static on;
+
+        # for OPTIONS return these headers and HTTP 200 status
+        if ($request_method = OPTIONS) {
+            add_header Access-Control-Allow-Methods "*";
+            add_header Access-Control-Allow-Headers "*";
+            add_header Access-Control-Allow-Origin "*";
+            return 200;
+        }
+    }
 
   location = /favicon.ico { access_log off; log_not_found off; }
   location = /robots.txt  { access_log off; log_not_found off; }
