--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,38 @@
+# render.yaml
+databases:
+  - name: laravel_memcache_db
+    plan: free
+    databaseName: laravel_memcache_db
+    user: laravel_memcache_db
+
 services:
   - type: web
-    name: bun
-    env: docker
-    repo: https://github.com/render-examples/bun-docker
-    plan: starter
-    autoDeploy: false
+    plan: free
+    name: laravel_memcache
+    runtime: docker
+    envVars:
+      # Database
+      - key: DATABASE_URL
+        fromDatabase:
+          name: laravel_memcache_db
+          property: connectionString
+      - key: DB_CONNECTION
+        value: pgsql
+      # Laravel
+      - key: APP_KEY
+        sync: false
+      - key: APP_ENV
+        value: production
+      - key: APP_DEBUG
+        value: false
+      - key: LOG_CHANNEL
+        value: stderr
+      # Image-specific vars (richarvey/nginx-php-fpm)
+      - key: WEBROOT
+        value: /var/www/html/public
+      - key: RUN_SCRIPTS
+        value: 1
+      - key: REAL_IP_HEADER
+        value: 1
+      - key: SKIP_COMPOSER
+        value: 1
