--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,12 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-STORAGE_ROOT="/var/www/cdn",
-STORAGE_URL="https://cdn.netisu.com",
-RENDERER_HOST=206.189.195.33,
-RENDERER_PORT=8001,
-DEFAULT_AVATAR_FILE="assets/img/dummy_headshot",
-MAINTENANCE_PASSWORD="2btxhtxpxx9qf9p9e7uiuspdwn6gdhqr",
+STORAGE_ROOT="/var/www/cdn"
+STORAGE_URL="https://cdn.netisu.com"
+RENDERER_HOST=206.189.195.33
+RENDERER_PORT=8001
+DEFAULT_AVATAR_FILE="assets/img/dummy_headshot"
+MAINTENANCE_PASSWORD="2btxhtxpxx9qf9p9e7uiuspdwn6gdhqr"
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
