--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,10 @@ RENDERER_PORT=8001
 DEFAULT_AVATAR_FILE="assets/img/dummy_headshot"
 MAINTENANCE_PASSWORD="2btxhtxpxx9qf9p9e7uiuspdwn6gdhqr"
 
+LEVEL_CAP_ENABLED=true
+LEVEL_CAP=100
+LEVEL_CAP_POINTS_CONTINUE=true
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
