--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.0.2",
         "arandilopez/laravel-profane": "^0.5.0",
+        "askedio/laravel5-profanity-filter": "^1.10",
         "based/momentum-trail": "^0.3.0",
         "cebe/markdown": "^1.2",
         "cjmellor/level-up": "^1.2.3",
