Dashboard Realtime Posting, speed changes. more caching!!!!

--- a/.env.example
+++ b/.env.example
@@ -2,20 +2,20 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:MGoyOGR4MmdpMTB6NnEzY3BlZXcwb2lidndyNGZ3dDc=
 APP_DEBUG=true
-APP_URL=http://localhost:8000
+APP_URL=https://netisu-backup.test
 APP_SERVICE="web"
 APP_PORT=8000
 
-STORAGE_ROOT="/var/www/cdn"
+STORAGE_ROOT="C:/laragon/www/cdn"
 STORAGE_URL="https://cdn.test"
-RENDERER_HOST=64.23.206.0
+RENDERER_HOST=localhost
 RENDERER_PORT=8001
 DEFAULT_AVATAR_FILE="assets/img/dummy_headshot"
 MAINTENANCE_PASSWORD="2btxhtxpxx9qf9p9e7uiuspdwn6gdhqr"
 
 PHP_CLI_SERVER_WORKERS=2
 
-GHOST_BLOG_URL="https://blog.bloxcity.com/rss/"
+GHOST_BLOG_URL="https://blog.brick-hill.com"
 
 LEVEL_CAP_ENABLED=true
 LEVEL_CAP=100
@@ -26,7 +26,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=web
 DB_USERNAME=root
@@ -100,7 +100,7 @@ VITE_REVERB_SCHEME="${REVERB_SCHEME}"
 
 OCTANE_SERVER=frankenphp
 
-SCOUT_DRIVER=meilisearch
+SCOUT_DRIVER=null
 
 MEILISEARCH_HOST=http://meilisearch:7700
 MEILISEARCH_KEY=masterKey
