--- a/package.json
+++ b/package.json
@@ -20,40 +20,44 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "axios": "^1.1.2",
-    "daisyui": "^3.5.0",
-    "laravel-vite-plugin": "^0.7.2",
+    "autoprefixer": "^10.4.19",
+    "axios": "^1.7.2",
+    "daisyui": "^3.9.4",
+    "laravel-vite-plugin": "^0.7.8",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.20",
+    "postcss": "^8.4.38",
     "rollup-obfuscator": "^3.0.2",
-    "sass": "^1.57.1",
-    "typescript": "^5.1.5",
-    "vite": "^4.0.0",
+    "sass": "^1.77.4",
+    "typescript": "^5.4.5",
+    "vite": "^4.5.3",
     "vite-plugin-obfuscator": "^1.0.5",
+    "vite-plugin-pwa": "^0.20.0",
     "vite-plugin-watch": "^0.2.0",
-    "vue-tsc": "^1.8.10"
+    "vue-tsc": "^1.8.27"
   },
   "dependencies": {
-    "@inertiajs/core": "^1.0.0",
-    "@inertiajs/vue3": "^1.0.15",
+    "@inertiajs/core": "^1.1.0",
+    "@inertiajs/vue3": "^1.1.0",
     "@popperjs/core": "^2.11.8",
     "@rollup/plugin-node-resolve": "^15.2.3",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vitejs/plugin-vue-jsx": "^3.0.2",
-    "@vue/server-renderer": "^3.3.4",
-    "dayjs": "^1.11.9",
+    "@types/node": "^20.14.2",
+    "@vitejs/plugin-vue": "^4.6.2",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@vue/server-renderer": "^3.4.27",
+    "dayjs": "^1.11.11",
     "fsevents": "^2.3.3",
-    "momentum-paginator": "^1.0.6",
-    "momentum-trail": "^0.3.3",
+    "laravel-echo": "^1.16.1",
+    "momentum-paginator": "^1.0.7",
+    "momentum-trail": "^0.3.5",
+    "path": "^0.12.7",
     "pusher-js": "^8.4.0-rc2",
     "tippy.js": "^6.3.7",
     "v-lazy-image": "^2.1.1",
-    "vue": "^3.3.4",
+    "vue": "^3.4.27",
     "vue-skeletor": "^1.0.6",
-    "vue-tippy": "^6.2.0",
-    "vue3-google-login": "^2.0.18",
-    "ziggy-js": "^1.6.0"
+    "vue-tippy": "^6.4.1",
+    "vue3-google-login": "^2.0.26",
+    "ziggy-js": "^1.8.2"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "4.9.5"
