--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   //"extends": "@vue/tsconfig/tsconfig.web.json",
   "compilerOptions": {
     // Enable latest features
-    "lib": ["ESNext"],
+    "lib": ["ESNext", "DOM"],
     "target": "ESNext",
     "module": "ESNext",
     "moduleDetection": "force",
