--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,22 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=base64:MGoyOGR4MmdpMTB6NnEzY3BlZXcwb2lidndyNGZ3dDc=
-APP_DEBUG=true
-APP_URL=https://netisu-backup.test
+APP_NAME=Netisu
+APP_ENV=production
+APP_KEY=
+APP_DEBUG=false
+APP_URL=https://netisu.com
 APP_SERVICE="web"
 APP_PORT=8000
 
-STORAGE_ROOT="C:/laragon/www/cdn"
-STORAGE_URL="https://cdn.test"
-RENDERER_HOST=localhost
-RENDERER_PORT=8001
+ADMIN_DOMAIN="https://admin.netisu.com"
+STORAGE_ROOT="/var/www/cdn"
+STORAGE_URL="https://cdn.netisu.com"
+RENDERER_HOST=
+RENDERER_PORT=
 DEFAULT_AVATAR_FILE="assets/img/dummy_headshot"
-MAINTENANCE_PASSWORD="2btxhtxpxx9qf9p9e7uiuspdwn6gdhqr"
+MAINTENANCE_PASSWORD="3c3ad8e67c799ec7ebc5cedea5577835b5c8b78b6d7a"
 
 PHP_CLI_SERVER_WORKERS=2
 
-GHOST_BLOG_URL="https://blog.brick-hill.com"
+GHOST_BLOG_URL="https://blog.netisu.com"
 
 LEVEL_CAP_ENABLED=true
 LEVEL_CAP=100
@@ -39,6 +40,7 @@ CACHE_DRIVER=array
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
+SESSION_DOMAIN=".netisu.com"
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
@@ -68,7 +70,7 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 GOOGLE_CLIENT_ID=564853151754-rdl5rdkjcs2r2bab8q007tbkk860bs8m.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-GOOGLE_REDIRECT_URL=https://netisu-backup.test/auth/login/callback/google
+GOOGLE_REDIRECT_URL=https://netisu.com/auth/login/callback/google
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
